| Bug #47932 | ndb_mgmd, fails to parse config with DiskSyncSize=4294967040 | ||
|---|---|---|---|
| Submitted: | 9 Oct 2009 10:48 | Modified: | 10 Oct 2009 20:01 |
| Reporter: | Magnus Blaudd | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 7.0 | OS: | Sun Solaris |
| Assigned to: | Magnus Blaudd | Target Version: | |
[9 Oct 2009 10:48]
Magnus Blaudd
[9 Oct 2009 10:50]
Magnus Blaudd
Maybe duplicate of Bug#43695?
[9 Oct 2009 14:39]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/86347
[9 Oct 2009 14:41]
Magnus Blaudd
With patch: 2009-10-09 14:41:01 [MgmtSrvr] ERROR -- at line 23: Illegal value 4294967040 for parameter DiskSyncSize. Legal values are between 32768 and 4294967039
[9 Oct 2009 16:20]
Bugs System
Pushed into 5.1.39-ndb-7.0.9 (revid:magnus.blaudd@sun.com-20091009141821-rrrm9xm2j8f3hstt) (version source revid:magnus.blaudd@sun.com-20091009141821-rrrm9xm2j8f3hstt) (merge vers: 5.1.39-ndb-7.0.9) (pib:13)
[9 Oct 2009 16:27]
Bugs System
Pushed into 5.1.39-ndb-7.1.0 (revid:magnus.blaudd@sun.com-20091009142206-4g25a32akb8t3o5u) (version source revid:magnus.blaudd@sun.com-20091009142206-4g25a32akb8t3o5u) (merge vers: 5.1.39-ndb-7.1.0) (pib:13)
[10 Oct 2009 20:01]
Jon Stephens
Documented bugfix in the NDB-7.0.9 changelog as follows:
On Solaris 10 for SPARC, ndb_mgmd failed to parse the config.ini
file when DiskSyncSize, whose permitted range of values is 32768
to 4294967039, was set equal to 4294967040 (which is also the
value of the internal constant MAX_INT_RNIL); in addition,
DiskSyncSize could not be set successfully higher than the
minimum.
Closed.
