Bug#47932 ndb_mgmd, fails to parse config with DiskSyncSize=4294967040  - The printout of unsigned 64bit values was using non standard %Lu, changed it    to %llu